--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /#t1-p2-bikeshare_data/chicago.csv
 /#t1-p2-bikeshare_data/new_york_city.csv
 /#t1-p2-bikeshare_data/washington.csv
+/#t1-p2-bikeshare_data/bikeshare.zip
+
