--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,4 @@
 /#t1-p2-bikeshare_data/new_york_city.csv
 /#t1-p2-bikeshare_data/washington.csv
 /#t1-p2-bikeshare_data/bikeshare.zip
-
+/#t1-p3-investigate_a_dataset/ncis-and-census-data
