--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
+# folders
 /#t1-p1-weather_trends/
 /test/
+/files/
+
+# files
 /#t1-p2-bikeshare_data/chicago.csv
 /#t1-p2-bikeshare_data/new_york_city.csv
 /#t1-p2-bikeshare_data/washington.csv
 /#t1-p2-bikeshare_data/bikeshare.zip
 /#t1-p3-investigate_a_dataset/ncis-and-census-data
+/cheatsheet.py
+/standardprocedure.py
